medicines-api/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicines-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: medicines-api
          image: mhraproductsproductionregistry.azurecr.io/products/medicines-api
