medicines-api/overlays/prod/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medicines-api
spec:
  hosts:
    - medicines-api.mhra.gov.uk
